# CrUDA

./: CMakeLists.txt  README.md
include/kernels/: matmul_naive.cuh  matmul_tiled.cuh
include/utils/: cuda_utils.cuh  matrix_utils.cuh
src/: main.cu
src/kernels/: matmul_naive.cu  matmul_tiled.cu
